# librarian

./: Cargo.toml  README.md
lbr-server/: Cargo.toml
lbr-server/src/: doc.rs  lib.rs  library.rs  main.rs
lbr-server/src/dbus/: cli.rs  edit.rs  mod.rs  search.rs
lbr-server/src/text/: index.rs  mod.rs
legacy/src/: book.rs  main.rs
librarian-cli/: Cargo.toml
librarian-cli/src/: main.rs
librarian-core/: Cargo.toml
librarian-core/src/: lib.rs
librarian-server/: Cargo.toml
librarian-server/src/: dbus.rs  lib.rs  library.rs  main.rs
librarian-server/src/dbus/: cli.rs  mod.rs  search.rs
librarian-server/src/text/: index.rs  mod.rs
src/: book.rs  cmd.rs  library.rs  main.rs
