[package]
name = "librarian"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lbr"
path = "src/main.rs"

[dependencies]
md5 = "0.7"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.0"
open = "1.3.3"
dirs = "2.0.2"
anyhow = "1.0"
ureq = "0.11.4"
fuzzy-matcher = "0.3.3"
