[package]
name = "lbr-server"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

[dependencies]
dbus = "0.8.3"
anyhow = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "0.3.4"
open = "1.3.3"

[dependencies.hex]
version = "0.4.2"
features = ["serde"]
