[package]
name = "librarian-server"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

[dependencies]
zbus = "1.0.0"
zvariant = "2.0.0"
anyhow = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "1.3.3"
librarian-core = { path = "../librarian-core" }
